--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -43,7 +43,7 @@
     {% block content %}
     {% endblock %}
     <footer>
-        <p>Rodapé</p>
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/danilofernandes96/" target="_blank">Danilo Fernandes</a> | Lorem Ipsum Inc. © 2021</p>
     </footer>
 </div>
 
